src/index.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

@import "tailwindcss";
@theme {
    --color-main: rgb(255,255,100);
    --spacing-card: 30rem;
    --font-Poppins: "Poppins", sans-serif;
    @keyframes loop-scroll {
        0% {
            transform: translateX(0);
        }
        100% {
            transform: translateX(-100%);
        }
    }
    --animate-loop-scroll: loop-scroll 50s linear infinite;
}

.cardScroll{
    overflow-x: hidden;
    scrollbar-width:thin;
    scrollbar-color: pink rgba(0,0,0,0);
}

